# Attention-Tracker

./: .gitignore  .venv  README.md  analysis_corllm_dataset.txt  analysis_corllm_heads.txt  analysis_corllm_selected_configs.txt  analysis_deepseek-phase2_phase2_heads.txt  analysis_gemma-phase2_phase2_dataset.txt  analysis_gemma-phase2_phase2_heads.txt  analysis_gemma-phase2_phase2_selected_configs.txt  analysis_llama_family.txt  analysis_moonlight-phase2_phase2_heads.txt  analysis_qwen-phase2_phase2_dataset.txt  analysis_qwen-phase2_phase2_heads.txt  analysis_qwen-phase2_phase2_selected_configs.txt  analysis_qwen_family.txt  audit.py  pyproject.toml  requirements.txt  run.py  run_dataset.py  select_head.py  utils.py
detector/: attn.py  utils.py
models/: attn_model.py  attn_model_nsys.py  utils.py
phase2_core/: __init__.py  attention.py  calibration.py  schema.py  spans.py  writer.py
render/: plot_attention_maps.py
scripts/: README.md  analyze_current_results.py  analyze_gemma_phase2.py  analyze_internal_attention_phase2.py  analyze_qwen_phase2.py  find_heads.sh  find_llama_family_heads.sh  find_qwen_family_heads.sh  gate1_pipeline_config_list.sh  gate1_pipeline_config_list_reuse_heads.sh  gate1_pipeline_yaml.sh  gate1_qwen_smoke.sh  gate1_smoke_yaml.sh  gate2_attention_config_list.sh  phase2_attention_config_list.sh  plot_attention_maps.sh  plot_llama_family_attention_maps.sh  plot_qwen_family_attention_maps.sh  run_config_list_dataset.sh  run_dataset.sh  run_llama_family_dataset.sh  run_qwen_family_dataset.sh  select_config_list_heads.sh  (+1 more)
scripts/common/: lib.sh  (+7 more)
(+380 files in other folders)
