[project]
name = "attention-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.48.0",
    "datasets>=5.0.0",
    "gradio==4.15.0",
    "huggingface-hub>=0.36.2,<1.0",
    "matplotlib>=3.10.0",
    "pandas>=2.3.0",
    "protobuf>=7.35.1",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "safetensors>=0.8.0",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.9,<2.11",
    "transformers>=4.57.6,<5",
]
